@startuml open_closed

class ProjectActivity{
    timeBudget : int
    --
    registerWorkTime(employee, date, workTime) : void
    sumWorkTime() : double
    getRemainingWorkTime() : double
    getWorkTimeRegistrationsForEmployee(initials) : List
}

class Activity <<(A, orchid)abstract>>{
    title : String
    startWeek : int
    endWeek : int
    --
}
class RegularActivity{
    id : int
    --
}

interface ConvertibleToViewModel{
        + toViewModel() : ViewModel
    }


Activity <|-- ProjectActivity
Activity <|- RegularActivity

ProjectActivity ..|> ConvertibleToViewModel
RegularActivity ..|> ConvertibleToViewModel

@enduml